Update page title and add meta description for Samanvi Travels Announcement App

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samanvi Dashboard</title>
+    <title>Samanvi Travels | Announcement App Access Dashboard</title>
+    <meta name="description" content="This page is to provide access to the Samanvi Route Voice App (Route Announcement App)">
   </head>
   <body>
     <div id="root"></div>
